Updating Angular UI code

--- a/src/app/profile/add-profile/add-profile.component.html
+++ b/src/app/profile/add-profile/add-profile.component.html
@@ -13,8 +13,13 @@
         <div class="modal-body md-5">
 
           <div class="md-form mx-3">
-              <label data-error="wrong" data-success="right" for="candidateName">Candidate Name</label>
-              <input type="text" id="candidateName" class="form-control validate"  name="candidateName" ngModel >
+              <label data-error="wrong" data-success="right" for="firstName">First Name</label>
+              <input type="text" id="candidateName" class="form-control validate"  name="firstName" ngModel >
+            </div>
+
+          <div class="md-form mx-3">
+              <label data-error="wrong" data-success="right" for="lastName">Last Name</label>
+              <input type="text" id="candidateName" class="form-control validate"  name="firstName" ngModel >
             </div>
 
         <div class="md-form mx-3">
