--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -4,20 +4,17 @@
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">
-              <span data-feather="home"></span>
+            <a class="nav-link" routerLink="dashboard" routerLinkActive="active">
               Dashboard
             </a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="shopping-cart"></span>
+              <a class="nav-link" routerLink="opportunity" routerLinkActive="active">
                 Opportunities
               </a>
             </li>
           <li class="nav-item">
             <a class="nav-link"  routerLink="profile" routerLinkActive="active">
-              <span data-feather="file"></span>
               Profiles
             </a>
           </li>
