--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,19 +6,25 @@
     <h1 class="h2">Profile</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
       <div class="btn-group mr-2">
-        <button class="btn btn-sm" data-toggle="modal" data-target="#modalLoginForm" (click)="showModal()" >Add a Profile</button>
+        <button class="btn btn-primary" data-toggle="modal" data-target="#profileModal" >Add a Profile</button>
       </div>
     </div>
   </div>
 
 
-<div class="table-responsive-sm">
-
-  <table class="table-sm table-bordered table">
+<div class="table-responsive-lg">
+  <table class="table-sm table">
     <thead>
     <tr class="table-info">
       <th class="d-none"></th>
-      <th>Select</th>
+      <th  style="text-align: center">
+        <div class="form-check">
+        <input class="form-check-input" type="checkbox" (change)="selectAll()" [checked]="selectedAll" />
+        <label class="form-check-label">
+
+        </label>
+      </div>
+</th>
       <th>Candidate Name</th>
       <th>Email ID</th>
       <th>Phone Number</th>
@@ -27,16 +33,27 @@
   </thead>
     <tbody>
     <tr *ngFor="let profile of profiles">
-        <td  class="d-none"><input type="hidden" value="profile.id" /></td>
-      <td><input type="checkbox"/></td>
-       <td><a href="#" role="button" (click)="onClickShowModal(profile)" data-toggle="modal" data-target="#modalShowProfile">{{ profile.firstName }}  {{ profile.lastName }}</a></td>
+      <td  class="d-none"><input type="hidden" value="profile.id"/></td>
+      <td style="text-align: center"><div class="form-check"><input type="checkbox" class="form-check-input" name="{{ profile.firstName }}" type="checkbox" id="{{profile.id}}"  [(ngModel)]="profile.selected" (change)="onChangeProfile($event.target.checked, profile); onChangeSelected();"/></div></td>
+      <td><a href="#" role="button" (click)="onClickShowModal(profile)"  data-toggle="modal" data-target="#modalShowProfile">{{ profile.firstName }}  {{ profile.lastName }}</a></td>
       <td>{{ profile.emailId }}</td>
       <td>{{ profile.phoneNumber }}</td>
       <td>{{ profile.title }}</td>
     </tr>
     </tbody>
   </table>
-  <button class="btn btn-danger" (click)="deleteProfile($event)">Delete</button>
+  <div>
+    <table width="80%">
+      <tr>
+          <td  style="text-align: right"><button class="btn btn-primary" (click)="validateEditSelection();">Edit</button></td>
+           <td><button class="btn btn-danger"  data-toggle="modal" (click)="validateDeleteSelection();">Delete</button></td>
+       </tr>
+       </table>
+  </div>
   </div>
 
-  <app-show-profile ></app-show-profile>
+  <app-show-profile [profile]='this.selectedProfile'></app-show-profile>
+  <app-confirm-delete [selectedProfiles]='this.selectedProfileIds' (updatedProfiles)="updateTableAfterDelete($event)"></app-confirm-delete>
+  <app-select-profile></app-select-profile>
+  <app-select-one-profile></app-select-one-profile>
+  <app-edit-profile [profile]='this.selectProfileForEdit[0]' (closeModalEvent)="updateTableAfterEdit($event)"></app-edit-profile>
