--- a/src/app/profile/show-profile/show-profile.component.html
+++ b/src/app/profile/show-profile/show-profile.component.html
@@ -3,15 +3,42 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Candidate Profile</h4>
+        <h4 class="modal-title w-100 font-weight-bold" *ngIf="profile">{{ profile.firstName}}'s Profile</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+      <div>
     <form  #showProfileForm="ngForm" >
+      <div class="modal-body md-5">
+            <div class="md-form mx-3">
+              <span *ngIf="profile"><strong>Number of Years Experience: </strong>
+              {{ profile.numberOfYearsExp}} </span>
+              </div>
+
+              <div class="md-form mx-3">
+                  <span *ngIf="profile"><strong>Profile Active: </strong>
+                    {{ profile.isActive}} </span>
+                </div>
 
 
-    </form>
+              <div class="md-form mx-3">
+                <span *ngIf="profile"><strong>Primary Skills: </strong>
+                  {{ profile.primarySkills}} </span>
+              </div>
+
+              <div class="md-form mx-3">
+                  <span *ngIf="profile"><strong>Secondary Skills: </strong>
+                    {{ profile.secondarySkills}} </span>
+              </div>
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-primary" type="button" data-dismiss="modal">OK</button>
+      </div>
+  </form>
+
+  </div>
     </div>
+
   </div>
 </div>
